store ignorehostpreflight flag value in preflight response instead of installation config
