# api/controllers/install/installation.go
@@ -20,8 +20,6 @@ func (c *InstallController) GetInstallationConfig(ctx context.Context) (*types.I
 		return nil, fmt.Errorf("installation config is nil")
 	}
 
-	config.IgnoreHostPreflights = c.ignoreHostPreflights
-
 	if err := c.installationManager.SetConfigDefaults(config); err != nil {
 		return nil, fmt.Errorf("set defaults: %w", err)
 	}
